# simple-web-crawler

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: blank.yml  workflow.yml
scripts/: build.sh
services/: __init__.py  models.py
tests/: test_main.py  test_models.py
