[tool.poetry]
name = "simple-web-crawler"
version = "0.1.0"
description = ""
authors = ["Shparki <thatdevshparki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
celery = "^5.2.1"
gevent = "^21.12.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Fix for poetry issue in 1.14
[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
